# toxic-audio-detection

./: .env.example  .gitignore  .pre-commit-config.yaml  .python-version  Dockerfile.anaconda  LICENSE  MakeFile  Makefile  README.md  docker-compose.yml  metadata.yaml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: pr_rules.yaml
api/: Dockerfile  api.py  lemma_tokenizer.py
app/: Dockerfile  app.py
conf/.jupyter/: jupyter_notebook_config.py
docs/: README.md
mlflow/: Dockerfile
mlruns/0/: meta.yaml
mlruns/291435861449544630/: meta.yaml
models/: mlflow.db
models/1/1ad15da902fb4dfebbd1c6f047d1809c/artifacts/model/: MLmodel
notebooks/: README.md  Week-06-mock-model-0,2.ipynb  Week_4_Aanal_patel_working(but_still_improving).ipynb  Week_4_Bimal_Mock_Model_Sequential_Incomplete.ipynb  Week_4_Data_segmentation_Bimal.ipynb  Week_7_Danilo.ipynb  jai_week_5.ipynb  mock-model-0-59.ipynb  week_3_aanal.ipynb  week_3_bimal.ipynb  week_3_ernie.ipynb  week_3_jai.ipynb  week_7_ernie.ipynb
notebooks/.Trash-0/files/: week_6_ernie.ipynb
notebooks/.Trash-0/info/: week_6_ernie.ipynb.trashinfo
notebooks/.ipynb_checkpoints/: week_3_ernie-checkpoint.ipynb
requirements/: requirements.api.txt  requirements.dev.txt  requirements.src.txt
src/: Dockerfile  data-deployment.yaml  datasets.py  lemma_tokenizer.py  model_training.py  models.py  train-deployment.yaml
src/config/: credentials.py
src/flows/: fetch_raw_data.py  model_training.py  processing_data.py  test.py
src/scripts/: fetch_raw_data.py  fetch_raw_data.sh  kaggle.py
(+5 files in other folders)
